@startuml
skinparam packageStyle rectangle
package presentation {
  class LoginGraphicController
  class LoginCLIGraphicController
  class CheckoutGraphicController
  class BookingCLIGraphicController
}
package application {
  class LoginApplicationController
  class ManageBookingsApplicationController
  class BookingFacade <<Facade>>
}
package persistence {
  interface DAOFactory <<Abstract Factory>>
  class InMemoryDAOFactory
  class FileSystemDAOFactory
  class JdbcDAOFactory
  interface UserDAO
  interface HotelDAO
  interface BookingDAO
}
package pricing {
  interface BookingPriceComponent
  class BaseBookingPrice
  abstract class BookingPriceDecorator <<Decorator>>
  class CancellationInsuranceDecorator
  class HealthInsuranceDecorator
  class FlexibleDateDecorator
}
package session {
  class UserSession
  class FlowContext
}

LoginGraphicController --> LoginApplicationController
LoginCLIGraphicController --> LoginApplicationController
CheckoutGraphicController --> ManageBookingsApplicationController
BookingCLIGraphicController --> ManageBookingsApplicationController
ManageBookingsApplicationController --> BookingFacade
BookingFacade --> UserDAO
BookingFacade --> HotelDAO
BookingFacade --> BookingDAO
BookingFacade --> BookingPriceComponent
BookingPriceComponent <|.. BaseBookingPrice
BookingPriceComponent <|.. BookingPriceDecorator
BookingPriceDecorator <|-- CancellationInsuranceDecorator
BookingPriceDecorator <|-- HealthInsuranceDecorator
BookingPriceDecorator <|-- FlexibleDateDecorator
DAOFactory <|.. InMemoryDAOFactory
DAOFactory <|.. FileSystemDAOFactory
DAOFactory <|.. JdbcDAOFactory
@enduml
